# ReusedPrinter

./: .gitignore  CMakeLists.txt  README.md
draft/: draft.docx  ~$draft.docx
shared/cmake/: CMakeLists.txt
src/: CMakeLists.txt  Settings.h  detecting_overhangs.h  fermat_curve.h  fermat_spirals.h  gcode.h  generating_support.h  hash_edge.h  main.cpp  menu_function.h  mesh_layout.h  mesh_layout_base.h  mesh_layout_opt.h  mesh_slicer.h  mesh_slicer_base.h  mesh_slicer_overhang.h  mesh_slicer_shift.h  mesh_support.h  mesh_support_base.h  normalizing_model.h  rendering_tree_support.h  scan_line_fill.h  scene_organizer.h  slice.h  slice_overhang_detector.h  testing_models_path.h  wall_support_generator.h
vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  supporter.sln
vs2015/libigl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  libigl.sln
vs2015/libigl/glew/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLEW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glew.vcxproj  glew.vcxproj.filters
vs2015/libigl/nanogui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  NanoGUI.sln  cmake_install.cmake  nanogui-obj.vcxproj  nanogui-obj.vcxproj.filters  nanogui.vcxproj  nanogui.vcxproj.filters
vs2015/libigl/stb_image/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  stb_image.sln  stb_image.vcxproj  stb_image.vcxproj.filters
vs2015/libigl/triangle/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  triangle.sln  triangle.vcxproj  triangle.vcxproj.filters
vs2015/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  supporter_bin.vcxproj  supporter_bin.vcxproj.filters
vs2015/src/Debug/: supporter_bin.exp
(+123 files in other folders)
